# PROYECTO-SEGUNDO-BIMESTRE

./: CMakeLists.txt  jugadorrepository.cpp
Desktop/PROYECTO_PROGRA_B2_Majo_Leo/: CMakeLists.txt  dialog.cpp
Desktop/PROYECTO_PROGRA_B2_Majo_Leo/Cpp/: mainwindow.cpp
Desktop/PROYECTO_PROGRA_B2_Majo_Leo/Headers/: mainwindow.h
Desktop/PROYECTO_PROGRA_B2_Majo_Leo/Ui/: mainwindow.ui
Desktop/jugadoresdefutbol/: CMakeLists.txt
Desktop/jugadoresdefutbol/data/: jugadores.txt
Desktop/jugadoresdefutbol/src/: jugadorrepository.cpp
Desktop/jugadoresdefutbol/ui/: login.ui  mainwindow.ui
Desktop/progra/: .gitignore
PROYECTO-SEGUNNDO-BIMESTRE/: CMakeLists.txt
PROYECTO-SEGUNNDO-BIMESTRE/data/: jugadores.txt
PROYECTO-SEGUNNDO-BIMESTRE/src/: jugador.cpp  login.cpp  login.ui  mainwindow.cpp
src/: jugador.h  jugadorrepository.h
ui/: mainwindow.ui
